fix: Pagination arrow is not centered

--- a/src/styles/pagination.less
+++ b/src/styles/pagination.less
@@ -92,6 +92,10 @@
     }
   }
 
+  &-item.@{pagination-prefix}-small {
+    padding-top: 1px;
+  }
+
   &-current[disabled] {
     border-color: @pagination-active-border;
     background: @pagination-active-bg;
